--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "ckbox": "^1.2.1",
+    "crypto-js": "^4.1.1",
     "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
