--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-select": "^5.7.0",
     "react-to-print": "^2.14.10",
     "react-transition-group": "^4.4.1",
+    "styled-components": "^5.3.6",
     "tinymce": "^6.3.1",
     "web-vitals": "^2.1.4"
   },
