--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.1.2",
     "ckbox": "^1.2.1",
     "crypto-js": "^4.1.1",
     "jspdf": "^2.5.1",
